statistic layput desktop + mob done

--- a/src/css/index/_index.scss
+++ b/src/css/index/_index.scss
@@ -1,8 +1,10 @@
 .index{
   &__content{
     padding-top: 50px;
+    padding-bottom: 200px;
   }
 
   @import "components/notifications";
   @import "components/create";
+  @import "components/statistic";
 }
