--- a/src/css/mixins/icons-font/fontello-codes.scss
+++ b/src/css/mixins/icons-font/fontello-codes.scss
@@ -1,5 +1,6 @@
 
 .icon-arrow-right:before { content: '\e800'; } /* '' */
+.icon-ok:before { content: '\e801'; } /* '' */
 .icon-blocks:before { content: '\e802'; } /* '' */
 .icon-calendar:before { content: '\e803'; } /* '' */
 .icon-help-circled-alt:before { content: '\e804'; } /* '' */
