--- a/src/css/header/_herder.scss
+++ b/src/css/header/_herder.scss
@@ -33,6 +33,7 @@
     &-content{
       display: flex;
       flex-direction: column;
+      width: 100%;
       &-close{
         display: none;
       }
