--- a/src/css/mixins/icons-font/fontello.scss
+++ b/src/css/mixins/icons-font/fontello.scss
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../fonts/icons/fontello.eot?17671269');
-  src: url('../fonts/icons/fontello.eot?17671269#iefix') format('embedded-opentype'),
-       url('../fonts/icons/fontello.woff2?17671269') format('woff2'),
-       url('../fonts/icons/fontello.woff?17671269') format('woff'),
-       url('../fonts/icons/fontello.ttf?17671269') format('truetype'),
-       url('../fonts/icons/fontello.svg?17671269#fontello') format('svg');
+  src: url('../font/fontello.eot?45623792');
+  src: url('../font/fontello.eot?45623792#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?45623792') format('woff2'),
+       url('../font/fontello.woff?45623792') format('woff'),
+       url('../font/fontello.ttf?45623792') format('truetype'),
+       url('../font/fontello.svg?45623792#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?17671269#fontello') format('svg');
+    src: url('../font/fontello.svg?45623792#fontello') format('svg');
   }
 }
 */
@@ -53,15 +53,15 @@
  
   /* Uncomment for 3D effect */
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
-
 }
  
 .icon-arrow-right:before { content: '\e800'; } /* '' */
+.icon-ok:before { content: '\e801'; } /* '' */
 .icon-blocks:before { content: '\e802'; } /* '' */
 .icon-calendar:before { content: '\e803'; } /* '' */
-.icon-help:before { content: '\e804'; } /* '' */
+.icon-help-circled-alt:before { content: '\e804'; } /* '' */
 .icon-cascade:before { content: '\e805'; } /* '' */
-.icon-arrow:before { content: '\e806'; } /* '' */
+.icon-down-open-big:before { content: '\e806'; } /* '' */
 .icon-cross:before { content: '\e807'; } /* '' */
 .icon-filter:before { content: '\e808'; } /* '' */
 .icon-message:before { content: '\e80a'; } /* '' */
@@ -73,5 +73,5 @@
 .icon-user:before { content: '\e810'; } /* '' */
 .icon-vk:before { content: '\e811'; } /* '' */
 .icon-wallet:before { content: '\e812'; } /* '' */
-.icon-unchecked:before { content: '\f096'; } /* '' */
-.icon-checked:before { content: '\f14a'; } /* '' */
+.icon-check-empty:before { content: '\f096'; } /* '' */
+.icon-ok-squared:before { content: '\f14a'; } /* '' */
