--- a/src/html/index/components/statistic.pug
+++ b/src/html/index/components/statistic.pug
@@ -5,11 +5,11 @@
 - var tableStatistic = [statisticItem1, statisticItem2, statisticItem3, statisticItem4]
 - var blockStatistic = [statisticItem1, statisticItem2, statisticItem3]
 
-.index__statistic
+section.index__statistic
     .index__statistic-row
         h1.index__statistic-title Статистика по рассылкам
         .index__statistic-actions
-            .index__statistic-actions-item.index__statistic-actions-item--table.icon-rows.active
+            .index__statistic-actions-item.index__statistic-actions-item--table.icon-rows
             .index__statistic-actions-item.index__statistic-actions-item--block.icon-blocks
     .index__statistic-content.index__statistic-content--table
         table.index__statistic-table
