--- a/src/css/mixins/icons-font/fontello.scss
+++ b/src/css/mixins/icons-font/fontello.scss
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?45623792');
-  src: url('../font/fontello.eot?45623792#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?45623792') format('woff2'),
-       url('../font/fontello.woff?45623792') format('woff'),
-       url('../font/fontello.ttf?45623792') format('truetype'),
-       url('../font/fontello.svg?45623792#fontello') format('svg');
+  src: url('../fonts/icons/fontello.eot?45623792');
+  src: url('../fonts/icons/fontello.eot?45623792#iefix') format('embedded-opentype'),
+       url('../fonts/icons/fontello.woff2?45623792') format('woff2'),
+       url('../fonts/icons/fontello.woff?45623792') format('woff'),
+       url('../fonts/icons/fontello.ttf?45623792') format('truetype'),
+       url('../fonts/icons/fontello.svg?45623792#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -61,7 +61,7 @@
 .icon-calendar:before { content: '\e803'; } /* '' */
 .icon-help-circled-alt:before { content: '\e804'; } /* '' */
 .icon-cascade:before { content: '\e805'; } /* '' */
-.icon-down-open-big:before { content: '\e806'; } /* '' */
+.icon-arrow:before { content: '\e806'; } /* '' */
 .icon-cross:before { content: '\e807'; } /* '' */
 .icon-filter:before { content: '\e808'; } /* '' */
 .icon-message:before { content: '\e80a'; } /* '' */
