--- a/src/css/mixins/icons-font/fontello.scss
+++ b/src/css/mixins/icons-font/fontello.scss
@@ -73,5 +73,5 @@
 .icon-user:before { content: '\e810'; } /* '' */
 .icon-vk:before { content: '\e811'; } /* '' */
 .icon-wallet:before { content: '\e812'; } /* '' */
-.icon-check-empty:before { content: '\f096'; } /* '' */
-.icon-ok-squared:before { content: '\f14a'; } /* '' */
+.icon-unchecked:before { content: '\f096'; } /* '' */
+.icon-checked:before { content: '\f14a'; } /* '' */
